--- a/timesketch/frontend-ng/src/assets/main.scss
+++ b/timesketch/frontend-ng/src/assets/main.scss
@@ -148,8 +148,16 @@ html {
   background-color: #f5f5f5;
 }
 
+.light-highlight-selected {
+  background-color: #e6e6e6;
+}
+
 .dark-highlight {
   background-color: #303030;
+}
+
+.dark-highlight-selected {
+  background-color: #383838;
 }
 
 .light-info-card {
