--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -2,7 +2,7 @@
 
 // Remove the default transition on the main element
 .v-main {
-    transition: none !important;
+  transition: none !important;
 }
 
 html {
@@ -128,11 +128,11 @@ html {
 }
 
 .light-font {
-  color: #333
+  color: #333;
 }
 
 .dark-font {
-  color: #fff
+  color: #fff;
 }
 
 .light-hover:hover {
@@ -174,10 +174,10 @@ html {
 }
 
 .dark-info-card {
-  background-color: #131F29;
-  color:#fff;
+  background-color: #131f29;
+  color: #fff;
   border-radius: 6px;
-  border:1px solid #174366;
+  border: 1px solid #174366;
 }
 
 .light-info-accordion {
@@ -186,8 +186,8 @@ html {
 }
 
 .dark-info-accordion {
-  background-color: #131F29;
-  color:#fff;
+  background-color: #131f29;
+  color: #fff;
 }
 
 .timeline-name-ellipsis {
@@ -214,4 +214,17 @@ html {
   -moz-transition: none !important;
   -o-transition: none !important;
   transition: none !important;
+}
+
+:root {
+  --theme-ai-color-red-100: #ffdce2;
+  --theme-ai-color-red-900: #940821;
+
+  --theme-ai-color-yellow-100: #fff6d3;
+
+  --theme-ai-color-gray-100: #e7e7e7;
+  --theme-ai-color-gray-900: #3d3d3d;
+
+  --theme-ai-color-green-100: #e3f5e3;
+  --theme-ai-color-green-900: #224525;
 }
