[AI][Styling][Chained from:feature/questions-list-nav-toggle] Progress bar styling (#19)
* add initial colors + modify chip styling for question cards

* add 'Priority' string

* add chip none styles

* move create question cta + move view report cta

* add v-navigation-drawer functionality

* swap button positioning

* add missing list loader

* remove prettier changes

* add nl

* fix padding issue from vuetify nav

* revert prettier changes

* revert ..prettierrc

* add progress bar styling

* * Make the Question Sidebar nav conditional
* Revert changes to the canvas file

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>
Co-authored-by: janosch <jkpr@google.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -217,6 +217,14 @@ html {
 }
 
 :root {
+  --theme-ai-color-white: #ffffff;
+
+  --theme-ai-color-gray-50: #f6f6f6;
+  --theme-ai-color-gray-100: #dadce0;
+
+  --theme-ai-color-ts-blue: #3874cb;
+  --theme-ai-color-blue-100: #e3ecfb;
+
   --theme-ai-ui-gray-50: #f6f6f6;
   --theme-ai-ts-blue: #3874cb;
 
@@ -233,7 +241,7 @@ html {
 }
 
 .ai-inline-cta {
-  color: var(--theme-ai-ts-blue);
+  color: var(--theme-ai-color-ts-blue);
   font-size: 11px;
   font-weight: 700;
   line-height: 1;
