[AI][Styling][Chained from:feature/questions-progress]  Style Question Cards (#20)
* add initial colors + modify chip styling for question cards

* add 'Priority' string

* add chip none styles

* move create question cta + move view report cta

* add v-navigation-drawer functionality

* swap button positioning

* add missing list loader

* remove prettier changes

* add nl

* fix padding issue from vuetify nav

* revert prettier changes

* revert ..prettierrc

* add progress bar styling

* add new icon + style question cards

* fix typo

* revert canvas changes

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>
Co-authored-by: janosch <jkpr@google.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -217,24 +217,25 @@ html {
 }
 
 :root {
+  --theme-ai-color-black: #000000;
   --theme-ai-color-white: #ffffff;
 
   --theme-ai-color-gray-50: #f6f6f6;
-  --theme-ai-color-gray-100: #dadce0;
+  --theme-ai-color-gray-100: #e7e7e7;
+  --theme-ai-color-gray-300: #dadce0;
+  --theme-ai-color-gray-600: #5d5d5d;
+  --theme-ai-color-gray-900: #3d3d3d;
 
   --theme-ai-color-ts-blue: #3874cb;
   --theme-ai-color-blue-100: #e3ecfb;
-
-  --theme-ai-ui-gray-50: #f6f6f6;
-  --theme-ai-ts-blue: #3874cb;
+  --theme-ai-color-blue-200: #c1daf6;
+  --theme-ai-color-blue-500: #257bd2;
+  --theme-ai-color-blue-800: #144278;
 
   --theme-ai-color-red-100: #ffdce2;
   --theme-ai-color-red-900: #940821;
 
   --theme-ai-color-yellow-100: #fff6d3;
-
-  --theme-ai-color-gray-100: #e7e7e7;
-  --theme-ai-color-gray-900: #3d3d3d;
 
   --theme-ai-color-green-100: #e3f5e3;
   --theme-ai-color-green-900: #224525;
