[AI][Styling][Chained from:feature/filter-bar-sort] Add Ai icon to nav + prettierrc (#22)
* add initial colors + modify chip styling for question cards

* add 'Priority' string

* add chip none styles

* move create question cta + move view report cta

* add v-navigation-drawer functionality

* swap button positioning

* add missing list loader

* remove prettier changes

* add nl

* fix padding issue from vuetify nav

* revert prettier changes

* revert ..prettierrc

* add progress bar styling

* add new icon + style question cards

* add filter bar sort select

* add styling for checkboxes

* revert prettier changes

* add options

* add line

* add prettierrc + ai icon to nav

* fix typo in path

* revert canvas

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>
Co-authored-by: janosch <jkpr@google.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -275,3 +275,24 @@ html {
     background-color: transparent;
   }
 }
+
+.ai-navitem {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2px;
+
+  &.router-link-active {
+    background-color: var(--theme-ai-color-gray-50);
+  }
+}
+
+.ai-navitem__icon {
+  width: 55px;
+  height: 55px;
+  flex: 0 0 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--theme-ai-color-gray-700);
+}
