--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -243,6 +243,7 @@ html {
   --theme-ai-color-yellow-100: #fff6d3;
 
   --theme-ai-color-green-100: #e3f5e3;
+  --theme-ai-color-green-500: #4caf50;
   --theme-ai-color-green-900: #224525;
 }
 
