[AI] "New" and "Pending Review" chips + 'status' and 'priority' filters (#28)
* add missing CreationIcon import

* comment out priority and status filters

* revert prettier changes

* remove commented out logic

* revert to spread vs slice

* update progress bar to account for isGenerating state

* DRY

* remove testing var

* add logic for rejecting questions

* remove log

* update title

* revert verbiage

* add pending chip with styling

* add new and pending-review chips + filters for status and priority

* remove log

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -236,11 +236,13 @@ html {
   --theme-ai-color-blue-500: #257bd2;
   --theme-ai-color-blue-700: #134c91;
   --theme-ai-color-blue-800: #144278;
+  --theme-ai-color-blue-900: #163864;
 
   --theme-ai-color-red-100: #ffdce2;
   --theme-ai-color-red-900: #940821;
 
   --theme-ai-color-yellow-100: #fff6d3;
+  --theme-ai-color-yellow-900: #82430c;
 
   --theme-ai-color-green-100: #e3f5e3;
   --theme-ai-color-green-500: #4caf50;
