[AI] Add Sorting and "Clear All" functionality (#29)
* add missing CreationIcon import

* comment out priority and status filters

* revert prettier changes

* remove commented out logic

* revert to spread vs slice

* update progress bar to account for isGenerating state

* DRY

* remove testing var

* add logic for rejecting questions

* remove log

* update title

* revert verbiage

* add pending chip with styling

* add new and pending-review chips + filters for status and priority

* remove log

* add sort

* add clear all btn

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -234,6 +234,7 @@ html {
   --theme-ai-color-blue-100: #e3ecfb;
   --theme-ai-color-blue-200: #c1daf6;
   --theme-ai-color-blue-500: #257bd2;
+  --theme-ai-color-blue-600: #1867c0;
   --theme-ai-color-blue-700: #134c91;
   --theme-ai-color-blue-800: #144278;
   --theme-ai-color-blue-900: #163864;
@@ -272,10 +273,6 @@ html {
 .ai-investigation-view {
   .v-list-item-title {
     color: var(--theme-ai-color-gray-950);
-  }
-
-  .v-list-item--variant-text .v-list-item__overlay {
-    background-color: transparent;
   }
 }
 
