[AI][Chained from:feature/question-heading-styling] Add priority chip select (#31)
* add missing CreationIcon import

* comment out priority and status filters

* revert prettier changes

* remove commented out logic

* revert to spread vs slice

* update progress bar to account for isGenerating state

* DRY

* remove testing var

* add logic for rejecting questions

* remove log

* update title

* revert verbiage

* add pending chip with styling

* add new and pending-review chips + filters for status and priority

* remove log

* add sort

* add clear all btn

* add general heading + misc styling

* consolidate priority function

* remove rounded from buttons

* Update timesketch/frontend-v3/src/components/AiInvestigationCanvas/ReportView/QuestionActionsStrip.vue

* move QuestionPriority.js

* * Extend updateQuestion API
* Add change priority logic to the frontend

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>

--- a/timesketch/frontend-v3/src/styles/global.scss
+++ b/timesketch/frontend-v3/src/styles/global.scss
@@ -239,10 +239,15 @@ html {
   --theme-ai-color-blue-800: #144278;
   --theme-ai-color-blue-900: #163864;
 
+  --theme-ai-color-red-50: #ffeff2;
   --theme-ai-color-red-100: #ffdce2;
+  --theme-ai-color-red-300: #ff92a6;
   --theme-ai-color-red-900: #940821;
 
+  --theme-ai-color-yellow-50: #fffbec;
   --theme-ai-color-yellow-100: #fff6d3;
+  --theme-ai-color-yellow-300: #ffd96d;
+  --theme-ai-color-yellow-600: #fb8c00;
   --theme-ai-color-yellow-900: #82430c;
 
   --theme-ai-color-green-100: #e3f5e3;
